--- a/configuration/production/server.ini
+++ b/configuration/production/server.ini
@@ -1,1 +1,4 @@
 ; Configuration for the Server Component of the SwiftGateway
+[baselogging]
+filename = /home/swiftriver/swiftgateway/logs/server/baselog.csv
+
