Changes to the production config from ml.prod.gateway.01

--- a/configuration/production/base.ini
+++ b/configuration/production/base.ini
@@ -1,16 +1,16 @@
 ; Base configuration coverig all aspect of the SwiftGateway
 [mongodb]
-host = 50.57.68.62
+host = 50.57.86.50
 port = 27017
 
 [mysql]
-host = 50.57.68.64
-user = swiftgateway
-password = FixV3mPSgC
-database = swiftgateway
+host = 50.57.86.50
+user = ml
+password = !!M3taM3ta
+database = ml
 
 [services] ;Ensure all services have a trailing slash
-river_id = http://50.57.68.23/
+river_id = http://thisisnotused
 
 [oauthcredentials]
 oauth_consumer_key = 2vTKnGSl76BzBb22NuUN
