Changed the location of the log path

--- a/configuration/production/thegateway.ini
+++ b/configuration/production/thegateway.ini
@@ -1,6 +1,6 @@
 ; Configuration for the Server Component of the SwiftGateway
 [thegatewaylogging]
-filename = /home/ml/code/logs/thegateway/baselog.csv
+filename = /var/log/gateway/users.csv
 
 [authenticationprovision]
 authentication_provider = MockAuthenticationProvider
