--- a/configuration/production/server.ini
+++ b/configuration/production/server.ini
@@ -1,4 +1,4 @@
 ; Configuration for the Server Component of the SwiftGateway
 [baselogging]
-filename = /home/ml/code/logs/server/baselog.csv
+filename = /var/log/gateway/server.csv
 
