Added the metalens mashup

--- a/configuration/development/base.ini
+++ b/configuration/development/base.ini
@@ -5,9 +5,9 @@ port = 27017
 
 [mysql]
 host = localhost
-user = swiftgateway
-password = swiftgateway
-database = swiftgateway
+user = ml_gateway
+password = ml_gateway
+database = ml_gateway
 
 [services] ;Ensure all services have a trailing slash
 river_id = http://50.56.31.61/
@@ -16,3 +16,8 @@ river_id = http://50.56.31.61/
 oauth_consumer_key = 2vTKnGSl76BzBb22NuUN
 oauth_secret = 5B6eGUOTLQWS0r0g1E9J
 
+[admin] ; '|' seporated list of admin accounts
+accounts = metalayer
+
+[appaccounts] ; '|' seporated list of app accounts, all with the same PW
+apps = metalens
