--- a/configuration/development/thegateway.ini
+++ b/configuration/development/thegateway.ini
@@ -1,11 +1,11 @@
 ; Configuration for the Server Component of the SwiftGateway
 [thegatewaylogging]
-filename = logs/thegateway/baselog.csv
+filename = /var/log/ml-gateway/thegateway.csv
 
 [authenticationprovision]
-authentication_provider = MockAuthenticationProvider
+authentication_provider = MetaLayerAuthenticationProvider
 
 [registrationprovision]
-registration_provider = MockRegistrationProvider
+registration_provider = MetaLayerRegistrationProvider
 
 
