--- a/configuration/staging/base.ini
+++ b/configuration/staging/base.ini
@@ -16,3 +16,8 @@ river_id = http://50.57.68.23/
 oauth_consumer_key = 2vTKnGSl76BzBb22NuUN
 oauth_secret = 5B6eGUOTLQWS0r0g1E9J
 
+[admin] ; '|' seporated list of admin accounts
+accounts = metalayer
+
+[appaccounts] ; '|' seporated list of app accounts, all with the same PW
+apps = metalens
