--- a/configuration/development/server.ini
+++ b/configuration/development/server.ini
@@ -1,4 +1,4 @@
 ; Configuration for the Server Component of the SwiftGateway
 [baselogging]
-filename = logs/server/baselog.csv
+filename = /var/log/ml-gateway/server.csv
 
