--- a/configuration/production/base.ini
+++ b/configuration/production/base.ini
@@ -10,9 +10,14 @@ password = !!M3taM3ta
 database = ml
 
 [services] ;Ensure all services have a trailing slash
-river_id = http://thisisnotused
+river_id = http://thisisnotused/
 
 [oauthcredentials]
 oauth_consumer_key = 2vTKnGSl76BzBb22NuUN
 oauth_secret = 5B6eGUOTLQWS0r0g1E9J
 
+[admin] ; '|' seporated list of admin accounts
+accounts = metalayer
+
+[appaccounts] ; '|' seporated list of app accounts, all with the same PW
+apps = metalens
