add the link to the core form the submit image function in the metalens mashup

--- a/configuration/development/base.ini
+++ b/configuration/development/base.ini
@@ -11,6 +11,7 @@ database = ml_gateway
 
 [services] ;Ensure all services have a trailing slash
 river_id = http://50.56.31.61/
+core = http://local.mlcore.com/
 
 [oauthcredentials]
 oauth_consumer_key = 2vTKnGSl76BzBb22NuUN
