--- a/configuration/production/base.ini
+++ b/configuration/production/base.ini
@@ -11,6 +11,7 @@ database = ml
 
 [services] ;Ensure all services have a trailing slash
 river_id = http://thisisnotused/
+core = http://50.57.98.144/
 
 [oauthcredentials]
 oauth_consumer_key = 2vTKnGSl76BzBb22NuUN
