updated staging config

--- a/configuration/staging/base.ini
+++ b/configuration/staging/base.ini
@@ -1,12 +1,12 @@
 ; Base configuration coverig all aspect of the SwiftGateway
 [mongodb]
-host = 50.57.68.62
+host = localhost
 port = 27017
 
 [mysql]
-host = 50.57.68.64
-user = swiftgateway
-password = FixV3mPSgC
+host = localhost
+user = root
+password = !!M3taM3ta
 database = swiftgateway
 
 [services] ;Ensure all services have a trailing slash
