--- a/configuration/staging/base.ini
+++ b/configuration/staging/base.ini
@@ -7,7 +7,7 @@ port = 27017
 host = localhost
 user = root
 password = !!M3taM3ta
-database = swiftgateway
+database = metalayergateway
 
 [services] ;Ensure all services have a trailing slash
 river_id = http://50.57.68.23/
